--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-MYSQL_HOST=localhost
-MYSQL_DATABASE=db
-MYSQL_USER=
-MYSQL_PASSWORD=
-MYSQL_ROOT_PASSWORD=root
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=laravel
+DB_USERNAME=
+DB_PASSWORD=
+DB_ROOT_PASSWORD=
